# avr-progs

./: .gitignore  CMakeLists.txt
clock/: CMakeLists.txt  main.c
cmake/: avr-gcc.toolchain.cmake
docker/: Dockerfile
i2c/: CMakeLists.txt  i2c_bitbang.c  i2c_bitbang.h
include/: easy_defs.h  mcp7940m.h  pcf8574lcd.h  sr595.h  ssd1306.h
ssd1306-example/: main.c
